objects/GGO_Static_Values__mdt.object
<CustomObject>
    <fields>
        <fullName>GGO_Custom_Label_Name__c</fullName>
        <description>Mention the custom Label to override the field label appearing on screen</description>
        <inlineHelpText>Mention the custom Label to override the field label appearing on screen</inlineHelpText>
        <label>Override Name With Label:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGO_Value__c</fullName>
        <label>GGO Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <inlineHelpText>Enter Record Type Name to utilize while creating a record.</inlineHelpText>
        <label>RecordTypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GGO Static Value</label>
    <pluralLabel>GGO Static Values</pluralLabel>
</CustomObject>